fixing broken ui

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -23,16 +23,6 @@ body{
 }
 
 .content {
-    /* From admin portal branch
-    background-color: rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(5px);
-    padding: 15px;
-    border-radius: 5px;
-    margin-top: 55px; */
-    min-height: 80% !important;
-    height: 90%;
-    width: 80%;
-    /* from main branch */
     background-color: rgba(255, 255, 255, 0.85);
     backdrop-filter: blur(8px);
     padding: 40px 30px;
